# RustApplication

./: settings.gradle
app/: .gitignore  build.gradle
app/src/androidTest/java/com/nixalpha/rustapplication/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/nixalpha/rustapplication/: MainActivity.kt
app/src/main/java/com/nixalpha/rustapplication/lib/: InternalPointerMarker.java  JNIReachabilityFence.java  Session.java
app/src/main/java/com/nixalpha/rustapplication/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/nixalpha/rustapplication/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
rust_lib/: Cargo.toml  build.rs
rust_lib/src/: java_glue.rs.in  lib.rs
