[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_lib"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
log-panics = "2.0"
android_logger = "0.11"
jni-sys = "0.3.0"

[build-dependencies]
flapigen = "0.6.0-pre9"
env_logger = "0.9"
